futzed with textsize and textappearance. Added actual working settings manual with nonsense reference defaults

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -41,7 +41,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@android:style/TextAppearance.Large"
+        android:textAppearance="@android:style/TextAppearance.Medium"
         android:text="@string/span_label"
         android:id="@+id/textViewSpanLabel"
         android:gravity="right"
@@ -50,7 +50,6 @@
         android:fadeScrollbars="true"
         android:editable="true"
         android:textColor="#c9c9c9"
-        android:textSize="20sp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -63,7 +62,6 @@
         android:id="@+id/editTextSpan"
         android:text="5.0"
         android:imeOptions="actionDone"
-        android:textSize="24dp"
         android:duplicateParentState="false"
         android:paddingBottom="2dp"
         android:layout_alignBaseline="@+id/textViewSpanLabel"
@@ -76,25 +74,23 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/span_units_si"
         android:id="@+id/textViewSpanUnits"
         android:layout_alignBaseline="@+id/editTextSpan"
         android:layout_toRightOf="@+id/editTextSpan"
-        android:textColor="#c9c9c9"
-        android:textSize="20sp"/>
+        android:textColor="#c9c9c9"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tribwidth_label"
         android:id="@+id/textViewTribLabel"
         android:paddingTop="8dp"
         android:layout_below="@+id/textViewSpanLabel"
         android:layout_toLeftOf="@+id/editTextLive"
-        android:textColor="#c9c9c9"
-        android:textSize="20sp"/>
+        android:textColor="#c9c9c9"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -105,7 +101,6 @@
         android:imeOptions="actionDone"
         android:gravity="right"
         android:fadeScrollbars="false"
-        android:textSize="24dp"
         android:layout_toRightOf="@+id/textViewTribLabel"
         android:layout_alignBaseline="@+id/textViewTribLabel"
         android:text="2.0"
@@ -117,27 +112,25 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/tribwidth_units_si"
         android:id="@+id/textViewTribUnits"
         android:layout_toRightOf="@+id/editTextTrib"
         android:layout_alignBaseline="@+id/editTextTrib"
-        android:textColor="#c9c9c9"
-        android:textSize="20sp"/>
+        android:textColor="#c9c9c9"/>
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/deadUDL_label"
         android:id="@+id/textViewDeadLabel"
         android:gravity="right"
         android:layout_below="@+id/textViewTribLabel"
         android:layout_toLeftOf="@+id/editTextSpan"
         android:paddingTop="8dp"
-        android:textColor="#c9c9c9"
-        android:textSize="20sp"/>
+        android:textColor="#c9c9c9"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -147,7 +140,6 @@
         android:id="@+id/editTextDead"
         android:text="2.5"
         android:imeOptions="actionDone"
-        android:textSize="24dp"
         android:textIsSelectable="false"
         android:paddingBottom="2dp"
         android:gravity="right"
@@ -159,28 +151,26 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/deadUDL_units_si"
         android:id="@+id/textViewDeadUnits"
         android:layout_centerHorizontal="true"
         android:layout_alignBaseline="@+id/editTextDead"
         android:layout_toRightOf="@+id/editTextDead"
-        android:textColor="#c9c9c9"
-        android:textSize="20sp"/>
+        android:textColor="#c9c9c9"/>
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/liveUDL_label"
         android:id="@+id/textViewLiveLabel"
         android:layout_below="@+id/textViewDeadLabel"
         android:layout_toLeftOf="@+id/editTextDead"
         android:gravity="right"
         android:paddingTop="8dp"
-        android:textColor="#c9c9c9"
-        android:textSize="20sp"/>
+        android:textColor="#c9c9c9"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -195,7 +185,6 @@
         android:gravity="right"
         android:layout_toRightOf="@+id/textViewLiveLabel"
         android:text="4.8"
-        android:textSize="24dp"
         android:paddingBottom="2dp"
         android:textColor="@android:color/white"
         android:selectAllOnFocus="true" />
@@ -203,20 +192,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/liveUDL_units_si"
         android:id="@+id/textViewLiveUnits"
         android:layout_alignStart="@+id/textViewDeadUnits"
         android:layout_alignBaseline="@+id/editTextLive"
         android:layout_toRightOf="@+id/editTextLive"
-        android:textColor="#c9c9c9"
-        android:textSize="20sp"/>
+        android:textColor="#c9c9c9"/>
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/deflnRatio_label"
         android:id="@+id/textViewDeflnLabel"
         android:layout_centerVertical="true"
@@ -225,8 +213,7 @@
         android:layout_alignRight="@+id/textViewTribLabel"
         android:fadeScrollbars="true"
         android:gravity="right"
-        android:textColor="#c9c9c9"
-        android:textSize="20sp"/>
+        android:textColor="#c9c9c9"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -236,7 +223,6 @@
         android:id="@+id/editTextDeflnRatio"
         android:imeOptions="actionDone"
         android:text="300"
-        android:textSize="24dp"
         android:paddingBottom="2dp"
         android:layout_alignBaseline="@+id/textViewDeflnLabel"
         android:layout_toRightOf="@+id/textViewDeflnLabel"
@@ -276,22 +262,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/Mf_label"
         android:id="@+id/textViewMomentLabel"
         android:gravity="right"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
         android:paddingLeft="95dp"
         android:textIsSelectable="false"
-        android:layout_toRightOf="@+id/editTextDeflnRatio"
         android:paddingTop="18dp"
-        android:layout_above="@+id/textViewRxnLabel" />
+        android:layout_above="@+id/textViewRxnLabel"
+        android:layout_toLeftOf="@+id/textViewMoment" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="10"
         android:id="@+id/textViewMoment"
         android:ems="5"
@@ -301,7 +286,6 @@
         android:gravity="right"
         android:enabled="true"
         android:layout_alignBaseline="@+id/textViewMomentLabel"
-        android:textSize="24sp"
         android:textStyle="bold"
         android:fadeScrollbars="true"
         android:paddingRight="8dp"
@@ -313,12 +297,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/Mf_units_si"
         android:id="@+id/textViewMomentUnits"
         android:layout_alignBaseline="@+id/textViewMoment"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
         android:layout_alignParentRight="true"
         android:paddingRight="10dp" />
 
@@ -330,12 +313,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/Rf_label"
         android:id="@+id/textViewRxnLabel"
         android:layout_marginTop="6dp"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
         android:layout_alignParentLeft="false"
         android:layout_alignRight="@+id/textViewMomentLabel"
         android:textIsSelectable="true"
@@ -344,7 +326,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="10"
         android:id="@+id/textViewReaction"
         android:ems="5"
@@ -354,7 +336,6 @@
         android:gravity="right"
         android:enabled="true"
         android:layout_alignBaseline="@+id/textViewRxnLabel"
-        android:textSize="24sp"
         android:textStyle="bold"
         android:fadeScrollbars="true"
         android:paddingRight="8dp"
@@ -364,24 +345,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/Rf_units_si"
         android:id="@+id/textViewReactionUnits"
         android:layout_alignBaseline="@+id/textViewReaction"
         android:textColor="@android:color/white"
-        android:layout_alignLeft="@+id/textViewMomentUnits"
-        android:textSize="20sp" />
+        android:layout_alignLeft="@+id/textViewMomentUnits" />
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/Ix_label"
         android:id="@+id/textViewIxLabel"
         android:layout_marginTop="6dp"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
         android:layout_alignRight="@+id/textViewRxnLabel"
         android:textIsSelectable="false"
         android:layout_alignBottom="@+id/buttonRefresh" />
@@ -389,7 +368,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="10"
         android:id="@+id/textViewIx"
         android:ems="5"
@@ -399,7 +378,6 @@
         android:gravity="right"
         android:enabled="true"
         android:layout_alignBaseline="@+id/textViewIxLabel"
-        android:textSize="24sp"
         android:textStyle="bold"
         android:fadeScrollbars="true"
         android:paddingRight="8dp"
@@ -409,12 +387,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/Ix_units1_si"
         android:id="@+id/textViewIxUnits"
         android:layout_alignBaseline="@+id/textViewIx"
         android:textColor="@android:color/white"
-        android:textSize="20sp"
         android:layout_alignLeft="@+id/textViewReactionUnits" />
 
 
