--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -12,6 +12,7 @@
         android:inputType="textCapWords"
         android:capitalize="words"
         android:singleLine="true"
+        android:numeric="decimal"
         android:maxLines="1" />
 
     <EditTextPreference
@@ -22,6 +23,7 @@
         android:inputType="textCapWords"
         android:capitalize="words"
         android:singleLine="true"
+        android:numeric="decimal"
         android:maxLines="1" />
 
     <EditTextPreference
@@ -32,6 +34,7 @@
         android:inputType="textCapWords"
         android:capitalize="words"
         android:singleLine="true"
+        android:numeric="integer"
         android:maxLines="1" />
 
 
