--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -9,10 +9,11 @@
         android:title="@string/pref_dead_load_factor"
         android:defaultValue="@string/pref_default_dead_load_factor"
         android:selectAllOnFocus="true"
-        android:inputType="textCapWords"
+        android:inputType="numberDecimal"
         android:capitalize="words"
         android:singleLine="true"
         android:numeric="decimal"
+        android:imeOptions="actionDone"
         android:maxLines="1" />
 
     <EditTextPreference
@@ -20,10 +21,11 @@
         android:title="@string/pref_live_load_factor"
         android:defaultValue="@string/pref_default_live_load_factor"
         android:selectAllOnFocus="true"
-        android:inputType="textCapWords"
+        android:inputType="numberDecimal"
         android:capitalize="words"
         android:singleLine="true"
         android:numeric="decimal"
+        android:imeOptions="actionDone"
         android:maxLines="1" />
 
     <EditTextPreference
@@ -31,10 +33,11 @@
         android:title="@string/pref_youngs_modulus"
         android:defaultValue="@string/pref_default_youngs_modulus"
         android:selectAllOnFocus="true"
-        android:inputType="textCapWords"
+        android:inputType="numberDecimal"
         android:capitalize="words"
         android:singleLine="true"
         android:numeric="integer"
+        android:imeOptions="actionDone"
         android:maxLines="1" />
 
 
